RESOLVED FIXED192910
ITMLKit Inspector: Elements tab does not show DOM Tree
https://bugs.webkit.org/show_bug.cgi?id=192910
Summary ITMLKit Inspector: Elements tab does not show DOM Tree
Joseph Pecoraro
Reported 2018-12-19 19:07:43 PST
ITMLKit Inspector: Elements tab does not show DOM Tree Steps to Reproduce: 1. Inspect ITMLKit context => Issues in Elements tab Notes: • Agents not getting activated • Events being received for extra domains before they are activated
Attachments
[PATCH] Proposed Fix (9.58 KB, patch)
2018-12-19 19:17 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2018-12-19 19:08:01 PST
Joseph Pecoraro
Comment 2 2018-12-19 19:17:07 PST
Created attachment 357770 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 3 2018-12-19 21:15:32 PST
Comment on attachment 357770 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=357770&action=review r=me > Source/WebInspectorUI/UserInterface/Base/Main.js:764 > + if (WI.mainTarget.DOMAgent) I was a little puzzled seeing these additions. Were these things simply not being done before, or did they move after target multiplexing was added? > Source/WebInspectorUI/UserInterface/Protocol/Connection.js:180 > + console.error("Protocol Error: Attempted to dispatch an unspecified method '" + qualifiedName + "'", messageObject); Nice tweak.
Joseph Pecoraro
Comment 4 2018-12-20 11:41:02 PST
Comment on attachment 357770 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=357770&action=review >> Source/WebInspectorUI/UserInterface/Base/Main.js:764 >> + if (WI.mainTarget.DOMAgent) > > I was a little puzzled seeing these additions. Were these things simply not being done before, or did they move after target multiplexing was added? I believe this was a new thing in startup added a while back. I don't think it is actually required here, but I want to make sure we do it in case the ITMLKit backend changes.
WebKit Commit Bot
Comment 5 2018-12-20 12:08:35 PST
Comment on attachment 357770 [details] [PATCH] Proposed Fix Clearing flags on attachment: 357770 Committed r239460: <https://trac.webkit.org/changeset/239460>
WebKit Commit Bot
Comment 6 2018-12-20 12:08:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.