ITMLKit Inspector: Elements tab does not show DOM Tree https://bugs.webkit.org/show_bug.cgi?id=192910 <rdar://problem/46680585>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-12-20
Reviewed by Brian Burg.

Source/JavaScriptCore:

* inspector/agents/InspectorAgent.h:
* inspector/agents/InspectorAgent.cpp:
(Inspector::InspectorAgent::enable):
(Inspector::InspectorAgent::activateExtraDomain):
(Inspector::InspectorAgent::activateExtraDomains):
Send extra domains immediately instead of waiting until
the Inspector domain is enabled. This will ensure the frontend
hears about extra augmented domains before augmenting agents
get a chance to send any messages.

Source/WebInspectorUI:

* UserInterface/Protocol/Connection.js:
(InspectorBackend.Connection.prototype._dispatchEvent):
Better logging for errors.

* UserInterface/Base/Main.js:
* UserInterface/Controllers/AppController.js:
(WI.AppController.prototype.activateExtraDomains):
Let Targets get a chance to activate extra domains.
Perform a little more work in these cases.

* UserInterface/Protocol/Target.js:
(WI.Target):
(WI.Target.prototype.activateExtraDomain):
Expose agents for domains that are active.
Expose agents for extra domains when they are activated.

Canonical link: https://commits.webkit.org/207501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239460 268f45cc-cd09-0410-ab3c-d52691b4dbfc