Source/JavaScriptCore/inspector/agents/InspectorAgent.h
@@ -71,9 +71,6 @@ private:
 
     Vector<String> m_pendingEvaluateTestCommands;
     std::pair<RefPtr<Protocol::Runtime::RemoteObject>, RefPtr<JSON::Object>> m_pendingInspectData;
-#if ENABLE(INSPECTOR_ALTERNATE_DISPATCHERS)
-    RefPtr<JSON::ArrayOf<String>> m_pendingExtraDomainsData;
-#endif
     bool m_enabled { false };
 };
 
